src/test/ui/traits/trait-suggest-where-clause.stderr
error[E0277]: the size for values of type `U` cannot be known at compilation time
  --> $DIR/trait-suggest-where-clause.rs:7:20
   |
LL | fn check<T: Iterator, U: ?Sized>() {
   |                       - this type parameter needs to be `std::marker::Sized`
LL |     // suggest a where-clause, if needed
LL |     mem::size_of::<U>();
   |                    ^ doesn't have a size known at compile-time
   | 
  ::: $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
LL | pub const fn size_of<T>() -> usize {
   |                      - required by this bound in `std::mem::size_of`

error[E0277]: the size for values of type `U` cannot be known at compilation time
  --> $DIR/trait-suggest-where-clause.rs:10:5
   |
LL | fn check<T: Iterator, U: ?Sized>() {
   |                       - this type parameter needs to be `std::marker::Sized`
...
LL |     mem::size_of::<Misc<U>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   | 
  ::: $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
LL | pub const fn size_of<T>() -> usize {
   |                      - required by this bound in `std::mem::size_of`
   |
   = note: required because it appears within the type `Misc<U>`

error[E0277]: the trait bound `u64: std::convert::From<T>` is not satisfied
  --> $DIR/trait-suggest-where-clause.rs:15:5
   |
LL |     <u64 as From<T>>::from;
   |     ^^^^^^^^^^^^^^^^^^^^^^ the trait `std::convert::From<T>` is not implemented for `u64`
   |
   = note: required by `std::convert::From::from`

error[E0277]: the trait bound `u64: std::convert::From<<T as std::iter::Iterator>::Item>` is not satisfied
  --> $DIR/trait-suggest-where-clause.rs:18:5
   |
LL |     <u64 as From<<T as Iterator>::Item>>::from;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::convert::From<<T as std::iter::Iterator>::Item>` is not implemented for `u64`
   |
   = note: required by `std::convert::From::from`

error[E0277]: the trait bound `Misc<_>: std::convert::From<T>` is not satisfied
  --> $DIR/trait-suggest-where-clause.rs:23:5
   |
LL |     <Misc<_> as From<T>>::from;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::convert::From<T>` is not implemented for `Misc<_>`
   |
   = note: required by `std::convert::From::from`

error[E0277]: the size for values of type `[T]` cannot be known at compilation time
  --> $DIR/trait-suggest-where-clause.rs:28:20
   |
LL |     mem::size_of::<[T]>();
   |                    ^^^ doesn't have a size known at compile-time
   | 
  ::: $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
LL | pub const fn size_of<T>() -> usize {
   |                      - required by this bound in `std::mem::size_of`
   |
   = help: the trait `std::marker::Sized` is not implemented for `[T]`

error[E0277]: the size for values of type `[&U]` cannot be known at compilation time
  --> $DIR/trait-suggest-where-clause.rs:31:5
   |
LL |     mem::size_of::<[&U]>();
   |     ^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   | 
  ::: $SRC_DIR/core/src/mem/mod.rs:LL:COL
   |
LL | pub const fn size_of<T>() -> usize {
   |                      - required by this bound in `std::mem::size_of`
   |
   = help: the trait `std::marker::Sized` is not implemented for `[&U]`

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0277`.
